[package]
name = "stable_diffusion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
burn = { version = "0.7.0" }
burn-ndarray = {version = "0.7.0", features = ["blas-accelerate"]}
burn-autodiff = "0.7.0"

ndarray = "0.15.6"
ndarray-rand = "0.14.0"

image = "0.24.6"

# Serialization
log = "0.4.19"
serde = { version = "1.0.164", features = ["std", "derive"]} 